--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-bootsplash": "^5.5.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-skeleton-placeholder": "^5.2.4",
